css/myStyle.css
.dep a{
	font-size: 14px;
}
#k-footer{
	padding: 0px;
}
.grey-col{
	background:rgba(0,0,0,0.002);
}
.lgrey-col{
	background:rgba(0,0,0,0.02);
}
.goog-te-gadget-icon
{
    display: none;
}
.up-event-date {
    color: #E4766E;
}
h1.title-median {
    text-transform: none;
}
.navbar-fixed-top
{
	box-shadow: 1px 5px 5px 0px;
}
span.text {
    color: #cc0033;
}
.cms-error
{
	margin:20px;
	color:black;
}

table
{
        color: black;
}
textarea
{
        color:black;
}
td
{
        padding:3%;
}
form
{
        margin-left:10px;
}
table.iconspanel > tbody > tr > td
{
    border: 1px solid #D4CCCC;
}
table.iconspanel > tbody > tr > td:hover {
    background-color: #336699;
    border-bottom: 1px black solid;
    border-right: 1px black solid;
}
table.iconspanel td:hover {
    text-align: center;
    vertical-align: middle;
    cursor: pointer;
}

.myrow0navbar{
    background:#31495A;/*#161A1D;*/
    padding-top:5px;
    padding-right:25px;
    padding-left:25px;
    margin-bottom: 0px;
}

.myrow0navbar a:link { color: white; text-decoration: none; font-size: 13px }
.myrow0navbar a:visited { color: white; text-decoration: none; font-size: 13px }
.myrow0navbar a:hover { color: white; outline:thin; }
.myrow0navbar a:focus { color: white; outline:thin; }

#achievements { 
    margin: 20px auto; 
    position: relative; 
    width: 200px; 
    height: 160px; 
    padding: 5px; 
    box-shadow: 0 0 20px rgba(0,0,0,0.4); 
    color: white;
    //background-color:black;
}



#achievements > div { 
    position: absolute; 
    top: 10px; 
    left: 10px; 
    right: 10px; 
    bottom: 10px; 
}


/*search box style on navbar - starts */

.navbar-form.navbar-left.top_search {
    margin: 0;
    //position: relative;
    padding-right: 0px;
    padding-top: 0px;
    //height: 10px;
}




.fa-spin-custom, .glyphicon-spin {
    -webkit-animation: spin 1000ms infinite linear;
    animation: spin 1000ms infinite linear;
}
@-webkit-keyframes spin {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(359deg);
        transform: rotate(359deg);
    }
}
@keyframes spin {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(359deg);
        transform: rotate(359deg);
    }
}




/*search box style on navbar - ends */

